tests/typing/hints/literals/int.smt2
(set-logic QF_UF)
(assert (= 1 1))
(check-sat)
